# filu-x

./: .coverage  .gitignore  CHANGELOG.md  IPFS_troubleshooting.md  LICENSE.md  README.md  SECURITY.md  SETUP.md  SPEC.md  Sneakernet_test.py  TODO.md  example-filu-x.json  filu-x_collector.sh  http_server.py  pyproject.toml  repost_design.md  update-follow.sh  validate.py
examples/full/: filu-x.json
examples/hybrid/: filu-x.json
examples/linked/: filu-x.json
examples/single-file/: filu-x.json
protocols/plugins/: README.md
scripts/: start-test-services.sh
spec/001.000.000/: schema-combined.json  schema.json
spec/001.000.000/archive/: archive.json
spec/001.000.000/core/: document.json  profile.json  protocols.json  signature.json
spec/001.000.000/modes/: hybrid.json  linked.json  single.json
spec/001.000.000/posts/: media.json  post.json  post_ref.json
spec/001.000.000/privacy/: encryption.json  private.json  public.json
src/filu_x/: __init__.py
src/filu_x.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/filu_x/cli/: __init__.py
src/filu_x/core/: content_validator.py  crypto.py  id_generator.py  ipfs_client.py  ipfs_mock.py  ipns.py  linker.py  resolver.py  sanitizer.py  templates.py
src/filu_x/storage/: layout.py  layout.py.bak
src/filu_x/templates/: follow_list.json.j2  manifest.json.j2  (+4 more)
test-data/local/: mapping.json
test-data/user_private/: private_config.json
tests/: README.md  conftest.py  pytest.ini  test_crypto.py  test_local_id_simple.py  test_post.py
tests/e2e/: test_basic_flow.py
(+26 files in other folders)
