[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filu-x"
version = "0.0.1"
description = "File-based decentralized social media"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL3"}
authors = [{name = "Toni"}]

dependencies = [
    "click>=8.1",
    "cryptography>=41.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
    "isort>=5.0",
]

[project.scripts]
filu-x = "filu_x.cli:cli"
